Restructured and improved unity container handling

--- a/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
+++ b/RTSFramework/RTSFramework.Concrete.RTS/RTSFramework.Concrete.RTS.csproj
@@ -83,6 +83,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicMapUpdater.cs" />
     <Compile Include="DynamicRTSApproach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetestAllApproach.cs" />
