--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -85,8 +85,7 @@
   <ItemGroup>
     <Compile Include="Artefacts\FileElement.cs" />
     <Compile Include="CoverageData.cs" />
-    <Compile Include="RTSController.cs" />
-    <Compile Include="RTSApproachBase.cs" />
+    <Compile Include="RTSApproach\RTSApproachBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ConsoleStopWatchTracker.cs" />
   </ItemGroup>
