--- a/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
+++ b/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
@@ -266,14 +266,16 @@
     <Compile Include="Artefacts\MSTestExectionResult.cs" />
     <Compile Include="Artefacts\MSTestTestcase.cs" />
     <Compile Include="Artefacts\MSTestTestResult.cs" />
-    <Compile Include="MSTestFrameworkConnectorWithOpenCoverage.cs" />
-    <Compile Include="MSTestFrameworkConnector.cs" />
+    <Compile Include="MSTest\MSTestConstants.cs" />
+    <Compile Include="MSTest\MSTestTestsExecutorWithOpenCoverage.cs" />
+    <Compile Include="MSTest\MSTestTestsDiscoverer.cs" />
+    <Compile Include="MSTest\MSTestTestsExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\OpenCoverXmlParser.cs" />
     <Compile Include="Utilities\OrderedTestsHelper.cs" />
     <Compile Include="Utilities\TrxParser.cs" />
     <Compile Include="VisualStudioDocumentOnlineDeltaDiscoverer.cs" />
-    <Compile Include="VsTest.cs" />
+    <Compile Include="VSTest\VsTestXmlClasses.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
