Renamed map to correspondenceModel

--- a/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
+++ b/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.csproj
@@ -282,9 +282,9 @@
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.Utilities.csproj">
+    <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
       <Project>{8E0E2C16-376E-4465-AF69-E1B300726080}</Project>
-      <Name>RTSFramework.RTSApproaches.Utilities</Name>
+      <Name>RTSFramework.RTSApproaches.CorrespondenceModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Core\RTSFramework.Core.csproj">
       <Project>{34343ADE-C3E0-423D-94B6-9D0400F498CB}</Project>
