--- a/RTSFramework/RTSFramework.Concrete.Adatpers/RTSFramework.Concrete.Adatpers.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Adatpers/RTSFramework.Concrete.Adatpers.csproj
@@ -58,7 +58,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArtefactAdapters\GitProgramCSharpProgramAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DeltaAdapters\TrivialDeltaAdapter.cs" />
   </ItemGroup>
@@ -82,6 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ArtefactAdapters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
