--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -94,9 +94,9 @@
       <Project>{ed8744a8-1310-45b9-b2e4-93e1f70bcbcc}</Project>
       <Name>RTSFramework.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.Utilities.csproj">
+    <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
       <Project>{8e0e2c16-376e-4465-af69-e1b300726080}</Project>
-      <Name>RTSFramework.RTSApproaches.Utilities</Name>
+      <Name>RTSFramework.RTSApproaches.CorrespondenceModel</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
