--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -100,9 +100,9 @@
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.csproj">
+    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.Core.csproj">
       <Project>{ecdb3480-0cf5-4ded-8118-046f41cd4743}</Project>
-      <Name>RTSFramework.Concrete.CSharp</Name>
+      <Name>RTSFramework.Concrete.CSharp.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Core\RTSFramework.Core.csproj">
       <Project>{34343ADE-C3E0-423D-94B6-9D0400F498CB}</Project>
