--- a/RTSFramework/RTSFramework.Controller/RTSFramework.Controller.csproj
+++ b/RTSFramework/RTSFramework.Controller/RTSFramework.Controller.csproj
@@ -78,6 +78,10 @@
       <Project>{24f91a87-f395-4fd5-8619-5a509715630e}</Project>
       <Name>RTSFramework.Concrete.Adatpers</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RTSFramework.Concrete.CSharp.MSTest\RTSFramework.Concrete.CSharp.MSTest.csproj">
+      <Project>{1a7501d7-db03-4f97-9d7d-d52193359c74}</Project>
+      <Name>RTSFramework.Concrete.CSharp.MSTest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Concrete.Git\RTSFramework.Concrete.Git.csproj">
       <Project>{2b9bb9a5-db75-4ec9-be24-0f06619d3216}</Project>
       <Name>RTSFramework.Concrete.Git</Name>
@@ -106,9 +110,9 @@
       <Project>{34343ade-c3e0-423d-94b6-9d0400f498cb}</Project>
       <Name>RTSFramework.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.csproj">
+    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.Core.csproj">
       <Project>{ecdb3480-0cf5-4ded-8118-046f41cd4743}</Project>
-      <Name>RTSFramework.Concrete.CSharp</Name>
+      <Name>RTSFramework.Concrete.CSharp.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
       <Project>{8e0e2c16-376e-4465-af69-e1b300726080}</Project>
