--- a/RTSFramework/RTSFramework.Console/RTSFramework.Console.csproj
+++ b/RTSFramework/RTSFramework.Console/RTSFramework.Console.csproj
@@ -132,9 +132,9 @@
       <Project>{34343ade-c3e0-423d-94b6-9d0400f498cb}</Project>
       <Name>RTSFramework.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.csproj">
+    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.Core.csproj">
       <Project>{ecdb3480-0cf5-4ded-8118-046f41cd4743}</Project>
-      <Name>RTSFramework.Concrete.CSharp</Name>
+      <Name>RTSFramework.Concrete.CSharp.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
       <Project>{8e0e2c16-376e-4465-af69-e1b300726080}</Project>
