--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -89,8 +89,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Artefacts\GitProgramModel.cs" />
-    <Compile Include="Artefacts\GitVersionReferenceType.cs" />
+    <Compile Include="Models\GitProgramModel.cs" />
+    <Compile Include="Models\GitVersionReferenceType.cs" />
     <Compile Include="GitProgramModelProvider.cs" />
     <Compile Include="LocalGitFilesDeltaDiscoverer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
