--- a/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
+++ b/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Artefacts\TFS2010ProgramModel.cs" />
+    <Compile Include="Models\TFS2010ProgramModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TFS2010ProgramModelProvider.cs" />
   </ItemGroup>
