--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -83,22 +83,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Artefacts\ICoverageData.cs" />
-    <Compile Include="Artefacts\IArtefactAdapter.cs" />
+    <Compile Include="Models\ICoverageData.cs" />
+    <Compile Include="Adapter\IArtefactAdapter.cs" />
     <Compile Include="DeltaDiscoverer\INestedOfflineDeltaDiscoverer.cs" />
-    <Compile Include="Delta\IDelta.cs" />
-    <Compile Include="Artefacts\IProgramModelElement.cs" />
-    <Compile Include="Artefacts\ITestCaseResult.cs" />
-    <Compile Include="Delta\IDeltaAdapter.cs" />
-    <Compile Include="Delta\StructuralDelta.cs" />
-    <Compile Include="Artefacts\TestCaseResultType.cs" />
+    <Compile Include="Models\Delta\IDelta.cs" />
+    <Compile Include="Models\IProgramModelElement.cs" />
+    <Compile Include="Models\ITestCaseResult.cs" />
+    <Compile Include="Adapter\IDeltaAdapter.cs" />
+    <Compile Include="Models\Delta\StructuralDelta.cs" />
+    <Compile Include="Models\TestCaseResultType.cs" />
     <Compile Include="IAutomatedTestsExecutorWithCoverageCollection.cs" />
     <Compile Include="IAutomatedTestsExecutor.cs" />
     <Compile Include="DeltaDiscoverer\IDeltaDiscoverer.cs" />
     <Compile Include="DeltaDiscoverer\IOfflineDeltaDiscoverer.cs" />
     <Compile Include="DeltaDiscoverer\IOnlineDeltaDiscoverer.cs" />
-    <Compile Include="Artefacts\IProgramModel.cs" />
-    <Compile Include="Artefacts\ITestCase.cs" />
+    <Compile Include="Models\IProgramModel.cs" />
+    <Compile Include="Models\ITestCase.cs" />
     <Compile Include="RTSApproach\IRTSApproach.cs" />
     <Compile Include="RTSApproach\IRTSListener.cs" />
     <Compile Include="ITestsDiscoverer.cs" />
