--- a/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Git/RTSFramework.Concrete.Git.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GitFilesProvider.cs" />
     <Compile Include="Models\GitProgramModel.cs" />
     <Compile Include="Models\GitVersionReferenceType.cs" />
     <Compile Include="GitProgramModelProvider.cs" />
