--- a/RTSFramework/RTSFramework.Console/RTSFramework.Console.csproj
+++ b/RTSFramework/RTSFramework.Console/RTSFramework.Console.csproj
@@ -104,6 +104,10 @@
       <Project>{1a7501d7-db03-4f97-9d7d-d52193359c74}</Project>
       <Name>RTSFramework.Concrete.CSharp.MSTest</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RTSFramework.Concrete.CSharp.Roslyn\RTSFramework.Concrete.CSharp.Roslyn.csproj">
+      <Project>{37205d1e-838e-4cbc-951f-777050368862}</Project>
+      <Name>RTSFramework.Concrete.CSharp.Roslyn</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Concrete.Git\RTSFramework.Concrete.Git.csproj">
       <Project>{2b9bb9a5-db75-4ec9-be24-0f06619d3216}</Project>
       <Name>RTSFramework.Concrete.Git</Name>
