Class Level Dynamic RTS

--- a/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.Core.csproj
+++ b/RTSFramework/RTSFramework.CSharp/RTSFramework.Concrete.CSharp.Core.csproj
@@ -239,12 +239,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\CSharpAssembly.cs" />
     <Compile Include="Models\CSharpProgramModel.cs" />
     <Compile Include="Models\CSharpFileElement.cs" />
+    <Compile Include="Models\ICSharpProgramModel.cs" />
     <Compile Include="Models\ICSharpTestcase.cs" />
     <Compile Include="CSharpFilesDeltaDiscoverer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VisualStudioDocumentOnlineDeltaDiscoverer.cs" />
     <Compile Include="VSTest\VsTestXmlClasses.cs" />
   </ItemGroup>
   <ItemGroup>
