--- a/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
+++ b/RTSFramework/RTSFramework.Concrete.TFS2010/RTSFramework.Concrete.TFS2010.csproj
@@ -67,6 +67,10 @@
       <Project>{ED8744A8-1310-45B9-B2E4-93E1F70BCBCC}</Project>
       <Name>RTSFramework.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RTSFramework.CSharp\RTSFramework.Concrete.CSharp.Core.csproj">
+      <Project>{ECDB3480-0CF5-4DED-8118-046F41CD4743}</Project>
+      <Name>RTSFramework.Concrete.CSharp.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
