--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -87,15 +87,12 @@
     <Compile Include="RTSApproach\RTSApproachBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ConsoleStopWatchTracker.cs" />
+    <Compile Include="Utilities\RelativePathHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
       <Project>{ed8744a8-1310-45b9-b2e4-93e1f70bcbcc}</Project>
       <Name>RTSFramework.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RTSFramework.RTSApproaches.Utilities\RTSFramework.RTSApproaches.CorrespondenceModel.csproj">
-      <Project>{8e0e2c16-376e-4465-af69-e1b300726080}</Project>
-      <Name>RTSFramework.RTSApproaches.CorrespondenceModel</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
