--- a/RTSFramework/RTSFramework.Concrete.CSharp.Roslyn/app.config
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.Roslyn/app.config
@@ -34,6 +34,10 @@
         <assemblyIdentity name="System.Threading.Thread" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
-    </assemblyBinding>
+			<dependentAssembly>
+				<assemblyIdentity name="System.ValueTuple" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+			</dependentAssembly>
+		</assemblyBinding>
   </runtime>
 </configuration>
