--- a/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
+++ b/RTSFramework/RTSFramework.Concrete.CSharp.MSTest/RTSFramework.Concrete.CSharp.MSTest.csproj
@@ -51,6 +51,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.TestPlatform.ObjectModel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.VisualStudio.TestPlatform.ObjectModel.14.0.0\lib\net20\Microsoft.VisualStudio.TestPlatform.ObjectModel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Mono.Cecil, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
       <HintPath>..\packages\Mono.Cecil.0.10.0\lib\net40\Mono.Cecil.dll</HintPath>
     </Reference>
@@ -62,6 +66,10 @@
     </Reference>
     <Reference Include="Mono.Cecil.Rocks, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
       <HintPath>..\packages\Mono.Cecil.0.10.0\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="OpenCover.Framework">
       <HintPath>..\packages\OpenCover.4.6.519\tools\OpenCover.Framework.dll</HintPath>
@@ -82,6 +90,7 @@
     <Compile Include="MSTestConstants.cs" />
     <Compile Include="MSTestTestsDiscoverer.cs" />
     <Compile Include="MSTestTestsExecutor.cs" />
+    <Compile Include="MSTestTestsExecutorWithCustomLogger.cs" />
     <Compile Include="MSTestTestsExecutorWithOpenCoverage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Adapters\MSTestExecutionResultParameters.cs" />
@@ -90,6 +99,10 @@
     <Compile Include="Adapters\TrxFileMsTestExecutionResultAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RTSFramework.Concrete.CSharp.MSTestLogger\RTSFramework.Concrete.CSharp.MSTestLogger.csproj">
+      <Project>{6b9870e8-1c11-4616-9861-e67e0766a06b}</Project>
+      <Name>RTSFramework.Concrete.CSharp.MSTestLogger</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RTSFramework.Contracts\RTSFramework.Contracts.csproj">
       <Project>{ed8744a8-1310-45b9-b2e4-93e1f70bcbcc}</Project>
       <Name>RTSFramework.Contracts</Name>
