--- a/RTSFramework/RTSFramework.Controller/packages.config
+++ b/RTSFramework/RTSFramework.Controller/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.VisualStudio.TestPlatform.ObjectModel" version="14.0.0" targetFramework="net461" />
   <package id="Unity" version="5.7.3" targetFramework="net461" />
 </packages>
